[gd_scene load_steps=13 format=3 uid="uid://dhjnugc48cumm"]

[ext_resource type="Texture2D" uid="uid://hhge5bg3lnyf" path="res://Assets/Ultimate Pixel Sci-Fi Gui 3.2/Ultimate Pixel 3.2/Animated Tablets/blue/tablet_animation_spritesheet.png" id="1_h5ona"]
[ext_resource type="Script" path="res://script/black-smithShop.gd" id="1_r1a0n"]
[ext_resource type="PackedScene" uid="uid://j47svx0fyeop" path="res://Scene/dropable.tscn" id="3_ht2lt"]
[ext_resource type="FontFile" uid="uid://ud2fp5pfxo2b" path="res://Assets/Fonts/paladins/paladinslaser.ttf" id="4_k268s"]
[ext_resource type="Texture2D" uid="uid://fpu2m0hdtw4h" path="res://Assets/Collectables/coin2_20x20.png" id="5_6yfa4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0le6r"]
atlas = ExtResource("1_h5ona")
region = Rect2(0, 0, 383, 244)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbwc3"]
atlas = ExtResource("1_h5ona")
region = Rect2(383, 0, 383, 244)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnwms"]
atlas = ExtResource("1_h5ona")
region = Rect2(766, 0, 383, 244)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhk3e"]
atlas = ExtResource("1_h5ona")
region = Rect2(1149, 0, 383, 244)

[sub_resource type="AtlasTexture" id="AtlasTexture_6sgah"]
atlas = ExtResource("1_h5ona")
region = Rect2(1532, 0, 383, 244)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahy1g"]
atlas = ExtResource("1_h5ona")
region = Rect2(1915, 0, 383, 244)

[sub_resource type="SpriteFrames" id="SpriteFrames_kn1bf"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_0le6r")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_lbwc3")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_dnwms")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_mhk3e")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_6sgah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahy1g")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="Black-smithShop" type="Control" groups=["Forge"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r1a0n")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(550, 327)
scale = Vector2(1.287, 1.12229)
sprite_frames = SubResource("SpriteFrames_kn1bf")
frame = 5
frame_progress = 1.0

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprite2D" type="Sprite2D" parent="Control"]
position = Vector2(695, 275.481)
scale = Vector2(2.54812, 2.54812)
texture = ExtResource("5_6yfa4")
region_enabled = true
region_rect = Rect2(0, 0, 19.9011, 20)

[node name="price" type="Label" parent="Control"]
layout_mode = 0
offset_left = 629.0
offset_top = 258.481
offset_right = 669.0
offset_bottom = 297.481
scale = Vector2(0.92805, 1.22478)
theme_override_fonts/font = ExtResource("4_k268s")
theme_override_font_sizes/font_size = 28
text = "0"

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 599.0
offset_top = 323.0
offset_right = 712.0
offset_bottom = 354.0
scale = Vector2(1.30706, 1.30706)
theme_override_fonts/font = ExtResource("4_k268s")
text = "Forge"

[node name="Dropable2" parent="Control" instance=ExtResource("3_ht2lt")]
modulate = Color(0.8, 1, 1, 0.372549)
position = Vector2(503, 278)
scale = Vector2(0.984679, 0.940062)

[node name="Dropable" parent="Control" instance=ExtResource("3_ht2lt")]
modulate = Color(0.8, 1, 1, 0.372549)
position = Vector2(382, 278)
scale = Vector2(0.984679, 0.940062)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D2" to="." method="_on_animated_sprite_2d_2_animation_finished"]
[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
[connection signal="body_entered" from="Control/Dropable" to="." method="_on_dropable_body_entered"]
